# aws-org-workspace

./: .dockerignore  .gitignore  .npmrc  .pre-commit-config.yaml  README.md  config.yaml  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  setup_config.sh  setup_links.sh  validate-all.sh
services/wilderchess/: Buildfile  Dockerfile  Procfile  README.md  analyze_game_length.py  compact_data.py  dependency-reduced-pom.xml  export_onnx.py  output_scaler.py  pom.xml  pyproject.toml  readme.txt  requirements.txt  scaler.pkl  scaler_fit.py  smoketest.py  testcsv.py  train.py
services/wilderchess/.ebextensions/: nginx-websockets.config  websocket.config  zassetmapping.config
services/wilderchess/assets/: index.css  index.js  index.js2  raphael.js
services/wilderchess/assets/bull/: bull.psd
services/wilderchess/assets/newt/: newt.psd
services/wilderchess/deploy/assets/: index.js  index.js2
services/wilderchess/deploy_stage/: Procfile
services/wilderchess/deploy_stage/.ebextensions/: 00_heartbeat.config  01_websockets.config
services/wilderchess/models/: best_wilderchess_model.pth  feature_names.pkl
services/wilderchess/ops/: deploy_eb.sh  push_bot.sh  run.sh
services/wilderchess/scripts/: analyze_action_dist.py  check_balance.py  deploy.sh  diagnose_balance.py  export_onnx.py  get_wr.py  meta_analysis.py  model.py  shape_parquet.py  strategy_analysis.py  train.py  verif.py
services/wilderchess/src/main/java/com/gabe/animalia/ability/: Bench.java  (+2 more)
services/wilderchess/src/main/resources/: index.html  wilderchess.onnx.data
(+328 files in other folders)
