[project]
name = "aws-master-workbench"
version = "0.1.0"
description = "Gabe's AWS & ML Master Workbench"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "boto3",        # AWS SDK available for any script
    "pre-commit",   # Security/Git hooks
    "ruff"          # Fast linter/formatter (highly recommended)
]

[tool.uv.workspace]
members = ["projects/*", "scripts/*"]